# gstreamer-plugins-meta-c

./: .gitignore  README.md
01-wr-rd/: CMakeLists.txt  build.sh  check.sh  gstmyreader.c  gstmywriter.c  run.sh
01-wr-rd/my_meta/: gstmy_meta.c  gstmy_meta.h
